Fix traversal step layout issue hiding Details button

--- a/packages/ui/src/main.scss
+++ b/packages/ui/src/main.scss
@@ -147,10 +147,11 @@ path {
 }
 
 .step__operation-type {
-  float: left;
   font-size: 14px;
   font-weight: bold;
   margin-right: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .step__body {
